@@ -1,13 +1,18 @@
 
-* Finer grain control of warnings/config options (per module/class/method)
-	(first part done, can do with __pychecker__ variable in module/function)
+Goals for next release:
+-----------------------
+* Add check for multiple functions/methods/classes w/same name
+* Add check for unused parameters
+* Type check object access based on possible types
 * Improve handling when importing packages
+
+Longer Term goals:
+------------------
 * Make check for 'self' a list instead of a string
 * Check function return values - partially complete
+* Add check for unreachable code
 * Add check for a[1,2] for lists (ok for dict)
 * Add check for except: pass
-* Add check for unused parameters
-* Add check for multiple functions/methods/classes w/same name
 * Add check that private functions are used in module/class
 * Add check that subclass overrides method that only raises NotImplementedError
 * Add check for using object members outside of class
