@@ -1,0 +1,7 @@
+Processing test39...
+
+Warnings...
+
+test_input/test39.py:3: No doc string for function func2
+test_input/test39.py:10: "s" is not first method argument
+test_input/test39.py:11: No doc string for class X2
