@@ -1,0 +1,3 @@
+
+suppressions = { 'test39': 'no-moduledoc', 'test39.func2': 'funcdoc',
+		 'test39.X1': 'no-classdoc', 'test39.X2.x': 'self="s"' }
