@@ -1,0 +1,12 @@
+
+def func1(): pass
+def func2(): pass
+
+class X1:
+    def x(self) : pass
+    def y(self) : pass
+
+class X2:
+    def x(self) : pass
+    def y(self) : pass
+
